# tweakers-pricewatch

./: .gitignore  CATEGORIES.md  LICENSE  README.md  categories.json  pyproject.toml  tweakers.py
.github/workflows/: publish.yml  update-categories.yml
scripts/: update_categories.py
tests/: test_integration.py
