[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tweakers-pricewatch"
dynamic = ["version"]
description = "Unofficial Python client for Tweakers.net Pricewatch — search products, browse categories, compare shop prices, and track price history."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["requests"]
keywords = ["tweakers", "pricewatch", "price-comparison", "netherlands", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/hatemosphere/tweakers-pricewatch"
Repository = "https://github.com/hatemosphere/tweakers-pricewatch"
Issues = "https://github.com/hatemosphere/tweakers-pricewatch/issues"

[tool.hatch.version]
path = "tweakers.py"
pattern = '^__version__\s*=\s*"(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = ["tweakers.py", "categories.json", "LICENSE"]

[tool.hatch.build.targets.wheel]
only-include = ["tweakers.py", "categories.json"]
